collapse content fix

--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,9 @@
 
 .entity-attributes img{
   border-radius: 10px;
-  max-width:30%;
+  max-width:300px;
+  float: left;
+  margin: 1em;
 }
 
 @keyframes App-logo-spin {
